gitops/clusters/apse2/local/platform/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: platform
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.opswork.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
